--- a/html/public/index.html
+++ b/html/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+      <!-- Pollyfill script -->
+    <script src="https://unpkg.com/core-js-bundle@3.6.1/minified.js"></script>
+    <!-- Live2DCubismCore script -->
+    <script src = "./js/live2dcubismcore.min.js"></script>
+    <!-- Build script -->
+    <script src = "./js/bundle.js"></script>
   </head>
   <body>
     <noscript>
